src/test/deca/syntax/invalid/homemade/test/test_lex_inv_circular_include3-3.deca
// Test circular include
#include "test_lex_inv_circular_include3-1.deca"